Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7532

QColumnView crashes when editing index from program

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.2
    • 4.6.1
    • Widgets: Itemviews
    • None
    • Mac os 10.6 qt 4.6.0/4.6.1
      Windows XP qt4.6.0
    • 94f5f21ac88de0d940d6ac27d222f1ef8e66d939

    Description

      When trying to create new folder in QDirModel and enter edit mode of that item, program crashes with this ASSERT: "first->d_func()>focus_next>d_func()->focus_prev == first" in file kernel/qwidget.cpp, line 6427
      When running program in release mode, it will crash in ~QWidget()
      It test example - select any folder, rightclick on it -> press New Folder. Crash in debug. Crash after closing in release.
      Other item views works as expected - folder is created and renaming started

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            arch Ivan Komissarov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes