Assert failure when setting a widget focus proxy as its successor in tab order

Now we check that and skip it from the tab list. Auto-test included.

Reviewed-by: leo
Task-number: QTBUG-7532
(cherry picked from commit 94f5f21ac88de0d940d6ac27d222f1ef8e66d939)